# dsr_ml_ops_student_copy

./: README.md  day1_slides.pptx  day2_slides.pptx  hello.sh  mlops_learning_manual.md  requirements.txt  test.py  ~$day2_slides.pptx
.github/workflows/: ml-ci.yml
day1/: bash_cheat_sheet.md
day1/Session_1/: iris.csv  seeds_and_determinism.ipynb
day1/Session_2/: experiment_tracking.ipynb
day1/Session_3/: data_validation.ipynb  drift_report.html
day1/Session_4/: .dockerignore  Dockerfile  README-docker.md  docker-compose.yaml  requirements.txt
day1/Session_4/airflow_home/: README.md
day1/Session_4/airflow_home/dags/: iris_pipeline.py
day2/: day2_materials.md  supplementary_materials.md
day2/Session_1/: README.md  iris_classifier.joblib  service.py  train.py
day2/Session_2/: Dockerfile  README.md  demonstration.txt  docker-compose.yml  new_file.txt  requirements.txt
day2/Session_3/: README.md  conftest.py  ml-ci_advanced.yml  test_data.py  test_data_advanced.py  test_model.py  test_model_advanced.py  test_service.py  test_service_advanced.py
mock_repo/: .gitignore  Dockerfile  Makefile  README.md  dvc.yaml  pyproject.toml  requirements.txt
mock_repo/.github/workflows/: ci.yml
mock_repo/notebooks/: 01_exploration.ipynb
mock_repo/src/churn/: __init__.py  config.py
mock_repo/src/churn/data/: load.py  validate.py
mock_repo/src/churn/features/: build.py
mock_repo/src/churn/inference/: service.py
mock_repo/src/churn/models/: train.py
mock_repo/tests/: test_data.py  test_features.py  test_model.py  test_service.py
